--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ button {
   text-transform: uppercase;
 }
 .header-logo-black {
-  color: black;
+  color: #2E2F42;
 }
 .info-list {
   font-weight: 500;
@@ -47,12 +47,17 @@ button {
 .info-list .link:focus {
   color: #404bbf;
 }
+.address{
+  font-style: normal;
+}
 .social-list .link {
   letter-spacing: 0.32px;
-  font-style: normal;
   color: #434455;
 }
 .social-list .link:hover {
+  color: #404bbf;
+}
+.social-list .link:focus{
   color: #404bbf;
 }
 .top {
@@ -72,14 +77,13 @@ button {
   letter-spacing: 0.64px;
   color: #fff;
   background-color: #4d5ae5;
-  border-radius: 4px;
   cursor: pointer;
 }
 .top-btn:hover {
   background-color: #404bbf;
 }
 .top-btn:focus {
-  background-color: #404bbf;
+  background-color:  #404BBF;
 }
 .team{
   background-color: #F4F4FD;
@@ -96,13 +100,20 @@ button {
   text-align: center;
   color: #2e2f42;
 }
-.about-list .title,
-.portfolio-list .title{
+.about-list .title{
   font-weight: 500;
   font-size: 20px;
-  line-height: 1.2; 
+  line-height: 1.11; 
   letter-spacing: 0.4px;
   color: #2e2f42;
+}
+.about-list .text{
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+}
+.team-list{
+  background-color: #FFFFFF;
 }
 .team-list .title{
   font-weight: 500;
@@ -112,11 +123,41 @@ button {
   text-align: center;
   color: #2e2f42;
 }
-.footer{
-  background-color: #2e2f42;
-  color: #F4F4FD;
+.team-list .text{
+  font-size: 16px;
+  line-height: 1.5;
   letter-spacing: 0.02em;
 }
+.portfolio-list .title{
+  font-weight: 500;
+  font-size: 36px;
+  line-height: 1.11; 
+  letter-spacing: 0.02em;
+  text-align: center;
+  text-transform: capitalize;
+  color: #2e2f42;
+}
+.portfolio-list .text{
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+}
+.footer{
+  background-color: #2e2f42;
+}
+.footer .header-logo{
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #4d5ae5;
+}
 .header-logo-white{
-  color: #F4F4FD;
+  color: #f4f4fd ;
+}
+.footer-text{
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
 }
