--- a/css/style.css
+++ b/css/style.css
@@ -103,8 +103,8 @@ button {
 .about-list .title{
   font-weight: 500;
   font-size: 20px;
-  line-height: 1.11; 
-  letter-spacing: 0.4px;
+  line-height: 1.2; 
+  letter-spacing: 0.02em;
   color: #2e2f42;
 }
 .about-list .text{
