--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,7 @@ button {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
-  letter-spacing: 0.4px;
+  letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
 }
